--- a/app/components/torrents/torrentList.html
+++ b/app/components/torrents/torrentList.html
@@ -1,7 +1,7 @@
 <div style="margin-left: -30px">
-	<ul> 
-		<li ng-Repeat="torrent in torrents"> 
-			<torrent-entry torrent="torrent"> </torrent-entry> 
-		</li> 
-	</ul>
+	<div class="list-group"> 
+		
+			<torrent-entry torrent="torrent" ng-Repeat="torrent in torrents"> </torrent-entry> 
+		
+	</div>
 </div>
