--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -1,6 +1,6 @@
 body{
 	background-color: #252526;
-	color: #ccc;
+	color: #27A4CD;
 }
 
 .navbar-default {
@@ -8,6 +8,72 @@ body{
 	border-color: transparent;
 }
 
+.navbar .brand, .navbar .nav > li > a:hover {
+    background-color: #3F3F46;
+	color: #27A4CD;
+}
+
+.navbar-nav {
+  font-size: 15px;
+}
+
 #eeh-navigation-page-wrapper{
 	border-left: none;
+}
+
+.torrent-heading {
+	font-size: 16px;
+	color: #27A4CD !important;
+	font-weight: bold;
+}
+
+.error-message-torrent-item {
+	color: orangered;
+	font-family: Courier New, Courier, monospace
+}
+
+.downloading-message-torrent-item {
+	color: #57AB34
+}
+
+.seeding-message-torrent-item{
+	color: #57AB34
+}
+
+.progress{
+	height: 10px;
+	margin-bottom: 5px;
+	background-color: #ccc;
+}
+
+.list-group-item {
+	border: none;
+	border-bottom: 1px solid;
+	background-color: transparent;
+}
+
+.list-group-item:first-child {
+	border-top-right-radius: 0px;
+	border-top-left-radius: 0px;	
+}
+
+.list-group-item:last-child {
+	border-bottom-right-radius: 0px;
+	border-bottom-left-radius: 0px;	
+}
+
+
+.list-group-item:hover{
+	background-color: #252526 !important;
+	border-top: 0px solid transparent !important;
+}
+
+.downloading-ratio{
+	color: #ccc;
+	font-size: 12px;
+}
+
+.seeding-ratio{
+	color: #ccc;
+	font-size: 12px;
 }
