--- a/app/components/torrents/layouts/torrentList.html
+++ b/app/components/torrents/layouts/torrentList.html
@@ -1,5 +1,5 @@
 <div style="margin-left: -30px">
 	<div class="list-group"> 
-		<torrent-entry torrent="torrent" ng-Repeat="torrent in torrents"> </torrent-entry> 
+		<torrent-entry torrent="torrent" ng-Repeat="torrent in torrents | orderBy:'-id' "> </torrent-entry> 
 	</div>
 </div>
