context menu added.

--- a/app/components/torrents/layouts/torrent.html
+++ b/app/components/torrents/layouts/torrent.html
@@ -1,4 +1,4 @@
-<a class="list-group-item"> 
+<a context-menu="menuOptions" class="list-group-item" > 
 	<div>
 		<h4 class="torrent-heading list-group-item-heading">{{torrent.name}}</h4>
 		<span ng-show="hasError" class="error-message-torrent-item">{{torrent.errorString}}</span>
